feat: add add_balance API for user add balance
